# hyperprism

./: Hyperprism.hs  LICENSE  Main.hs  hyperprism.cabal
src/: Hyperprism.hs
