name:                hyperprism
version:             0.1.0.0
synopsis:            Dump github info into pg
description:         Dump github info into pg
license:             MIT
license-file:        LICENSE
author:              Mark Fine <mark.fine@gmail.com>
maintainer:          Mark Fine <mark.fine@gmail.com>
copyright:           (c) 2014 Mark Fine
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Hyperprism
  build-depends:       base,
                       github,
                       postgresql-simple
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable hyperprism
  main-is:             Main.hs
  build-depends:       base,
                       github,
                       hyperprism,
                       optparse-applicative
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
